# shaders

./: CMakeLists.txt  LICENSE.md  README.md
shaders/: digitalrain.frag  digitalrain.fs  matrix.frag  matrix.fs  starfield.frag  starfield.fs  vertex.vert
src/: digitalrain.cpp  digitalrain.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  resources.qrc  starfield.cpp  starfield.h
